experiments/mat_free3D_A30/log_2.txt
-- Polynomial degree: 2
-- Compiling for NVIDIA GPUs
CMake Warning (dev) at /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/lib/cmake/dolfinx/DOLFINXConfig.cmake:49 (find_package):
  Policy CMP0144 is not set: find_package uses upper-case <PACKAGENAME>_ROOT
  variables.  Run "cmake --help-policy CMP0144" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  Environment variable BOOST_ROOT is set to:

    /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view

  For compatibility, find_package is ignoring the variable, but code in a
  .cmake module might still use it.
Call Stack (most recent call first):
  CMakeLists.txt:64 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Found Boost 1.87.0 at /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/lib/cmake/Boost-1.87.0
--   Requested configuration: QUIET REQUIRED COMPONENTS timer
-- Found boost_headers 1.87.0 at /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/lib/cmake/boost_headers-1.87.0
-- Found boost_timer 1.87.0 at /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/lib/cmake/boost_timer-1.87.0
--   [x] libboost_timer.so.1.87.0
--   [ ] libboost_timer.a
-- Adding boost_timer dependencies: headers
-- Found Boost: /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/lib/cmake/Boost-1.87.0/BoostConfig.cmake (found suitable version "1.87.0", minimum required is "1.70") found components: timer 
-- Checking for Basix hints with /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/bin/python3
-- Adding /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/lib/python3.12/site-packages/basix to Basix search hints
-- Found HDF5 at /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/cmake via NO_MODULE. Now trying to extract locations etc.
-- Trying to get properties of target hdf5-shared
-- Found imported configurations: RELEASE
-- Start search through imported configurations in the following order: Debug;RELWITHDEBINFO;RELEASE;DEBUG;RELEASE
-- Selected imported configuration: RELEASE
-- HDF5_DIR: /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/cmake
-- HDF5_DEFINITIONS: 
-- HDF5_INCLUDE_DIRS: /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/include
-- HDF5_LIBRARIES: hdf5-shared
-- HDF5_HL_LIBRARIES: 
-- HDF5_C_DEFINITIONS: 
-- HDF5_C_INCLUDE_DIR: 
-- HDF5_C_INCLUDE_DIRS: /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/include
-- HDF5_C_LIBRARY: /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/lib/libhdf5.so.310.5.0
-- HDF5_C_LIBRARIES: hdf5-shared
-- HDF5_C_HL_LIBRARY: 
-- HDF5_C_HL_LIBRARIES: 
-- Defined targets (if any):
-- ... hdf5::hdf5
-- ... hdf5-static
-- ... hdf5-shared
-- Found Boost 1.87.0 at /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/lib/cmake/Boost-1.87.0
--   Requested configuration: QUIET REQUIRED COMPONENTS program_options
-- Found boost_program_options 1.87.0 at /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/lib/cmake/boost_program_options-1.87.0
--   [x] libboost_program_options.so.1.87.0
--   [ ] libboost_program_options.a
-- Adding boost_program_options dependencies: headers
-- Found Boost: /local/data/public/sr2120/spack/var/spack/environments/nfenics-env/.spack-env/view/lib/cmake/Boost-1.87.0/BoostConfig.cmake (found suitable version "1.87.0", minimum required is "1.70") found components: program_options 
-- Configuring done (1.0s)
-- Generating done (0.0s)
-- Build files have been written to: /local/data/public/sr2120/bernstein-gpu/build
[ 25%] Compiling mat_free_mass3D.py
[ 50%] Building CUDA object CMakeFiles/mat_free_mass3D.dir/examples/mat_free_mass3D/main.cpp.o
/local/data/public/sr2120/bernstein-gpu/src/mass_baseline.hpp(237): warning #177-D: variable "nq" was declared but never referenced
      constexpr int nq = 4 * (P == 1) + 14 * (P == 2) + 12 * (P == 3) + 45 * (P == 4) +
                    ^
          detected during:
            instantiation of "dolfinx::acc::MatFreeMassBaseline3D<T, P, Q>::MatFreeMassBaseline3D(std::shared_ptr<dolfinx::mesh::Mesh<T>>, std::shared_ptr<dolfinx::fem::FunctionSpace<T>>, std::span<const T, 18446744073709551615UL>) [with T=T, P=2, Q=3]" at line 164 of /local/data/public/sr2120/bernstein-gpu/examples/mat_free_mass3D/main.cpp
            instantiation of "void solver<T,U>(MPI_Comm, boost::program_options::variables_map) [with T=PetscScalar, U=T]" at line 283 of /local/data/public/sr2120/bernstein-gpu/examples/mat_free_mass3D/main.cpp

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/local/data/public/sr2120/bernstein-gpu/src/kernels_mass.hpp(176): error: zero-sized variable "qvals" is not allowed in device code
    __attribute__((shared)) T qvals[nq];
                              ^
          detected during:
            instantiation of "void mass_operator_baseline<T,nd,nq>(const T *, T *, const T *, const T *, const int32_t *, const T *) [with T=T, nd=10, nq=0]" at line 290 of /local/data/public/sr2120/bernstein-gpu/src/mass_baseline.hpp
            instantiation of "void dolfinx::acc::MatFreeMassBaseline3D<T, P, Q>::operator()(const Vector &, Vector &) [with T=T, P=2, Q=3, Vector=DeviceVector]" at line 189 of /local/data/public/sr2120/bernstein-gpu/examples/mat_free_mass3D/main.cpp
            instantiation of "void solver<T,U>(MPI_Comm, boost::program_options::variables_map) [with T=PetscScalar, U=T]" at line 283 of /local/data/public/sr2120/bernstein-gpu/examples/mat_free_mass3D/main.cpp

1 error detected in the compilation of "/local/data/public/sr2120/bernstein-gpu/examples/mat_free_mass3D/main.cpp".
gmake[3]: *** [CMakeFiles/mat_free_mass3D.dir/build.make:81: CMakeFiles/mat_free_mass3D.dir/examples/mat_free_mass3D/main.cpp.o] Error 1
gmake[2]: *** [CMakeFiles/Makefile2:119: CMakeFiles/mat_free_mass3D.dir/all] Error 2
gmake[1]: *** [CMakeFiles/Makefile2:126: CMakeFiles/mat_free_mass3D.dir/rule] Error 2
gmake: *** [Makefile:137: mat_free_mass3D] Error 2
$ cmake -S . -B build -Dnvidia=ON -Dpolynomial_degree=2
$ cmake --build build --target mat_free_mass3D --clean-first
Traceback (most recent call last):
  File "/local/data/public/sr2120/bernstein-gpu/run.py", line 88, in <module>
    main()
  File "/local/data/public/sr2120/bernstein-gpu/run.py", line 75, in main
    subprocess.check_call(build_cmd)
  File "/local/data/public/sr2120/spack/opt/spack/linux-ubuntu24.04-icelake/gcc-13.3.0/python-3.12.8-cnj2xrqqn6x775viz25o2m6wyaqg3fxi/lib/python3.12/subprocess.py", line 413, in check_call
    raise CalledProcessError(retcode, cmd)
subprocess.CalledProcessError: Command '['cmake', '--build', 'build', '--target', 'mat_free_mass3D', '--clean-first']' returned non-zero exit status 2.
